# dava.engine

./: .gitignore  README  generating_projects.bash  generating_projects.bat
Sources/: CMakeLists.txt
Sources/CMake/ConfigureFiles/: CoverageExecuteGenHtml.in
Sources/CMake/Modules/: CMake-common.cmake  DavaTemplate.cmake  FindDavaFramework.cmake  FindSteam.cmake  GenerateClangCompleteConfig.cmake  GlobalVariables.cmake  MergeStaticLibrarees.cmake
Sources/CMake/Toolchains/: ios.toolchain.cmake
Sources/Engine/: CMakeLists.txt
Sources/Engine/Animation/: CMakeLists.txt
Sources/Engine/Autotesting/: AutotestingDB.cpp
Sources/Engine/Base/: CMakeLists.txt  FastName.h  FixedSizePoolAllocator.cpp
Sources/Engine/Database/: CMakeLists.txt
Sources/Engine/Debug/: UIDismissionHandlerAlertView.mm
Sources/Engine/FileSystem/: CMakeLists.txt  LocalizationIPhone.mm  XMLParser.mm
Sources/Engine/Input/: CMakeLists.txt
Sources/Engine/Math/: CMakeLists.txt
Sources/Engine/Network/: MailComposeDelegate.mm  MailSenderMacOS.mm
Sources/Engine/Platform/: CMakeLists.txt  FrameworkMain.cpp  FrameworkMain.h  Mutex.h  Process.cpp
Sources/Engine/Render/: CMakeLists.txt  RenderBase.h
Sources/Engine/Scene3D/: CMakeLists.txt
Sources/Engine/Sound/: CMakeLists.txt  FMODSoundSystem.cpp  FMODUtils.h
Sources/Engine/UI/: CMakeLists.txt  UIControl.h  UIScreenManagerAndroid.cpp  UIScreenManagerAndroid.h  UIScreenManageriPhone.h  UIScreenManageriPhoneImpl.mm  UITextFieldiPhone.mm  UIWebView.h
Sources/Engine/Utils/: HTTPDownloader.mm  StringFormat.cpp  UtilsMacOS.mm
Sources/Internal/: Android.mk  DAVAClassRegistrator.cpp  DAVAEngine.h
Sources/Internal/Animation/: AnimationManager.cpp  AnimationManager.h  KeyframeAnimation.h
Sources/Internal/Autotesting/: AutotestingDB.cpp  AutotestingSystem.cpp  AutotestingSystemLua.cpp  AutotestingSystemLua.h  KeyedArchiveSwig.cpp  RectSwig.cpp  UIControlSwig.cpp  UIControl_wrap.cxx  Vector_wrap.cxx
Sources/Internal/Base/: AlignedAllocator.cpp  AllocatorFactory.cpp  AllocatorFactory.h  Any.h  Atomic.h  AtomicAndroid.cpp  AtomicHtml5.cpp  AtomicNaCl.cpp  AtomicWin32.cpp  AutoStorage.h  BaseMath.cpp  BaseObjectChecker.cpp  BaseTypes.h  Data.cpp  DynamicObjectCache.h  EnumMap.h  EventDispatcher.cpp  EventDispatcher.h  FixedSizePoolAllocator.cpp  FixedSizePoolAllocator.h  FixedString.h  Function.h  GlobalEnum.cpp  Hash.h  Hash.hpp  HashMap.h  IModule.h  IntrospectionBase.h  IntrospectionCollection.h  MemoryRoutines.cpp  MemoryRoutines.h  ModuleManager.h  ObjectFactory.h  Observer.h  Pool.h  Profiler.cpp  Profiler.h  Profiler.hpp  RefPtr.h  Result.h  (+16 more)
Sources/Internal/Command/: CommandStack.h  ObjectHandle.cpp  ObjectHandle.h  SetCollectionItemValueCommand.h  SetPropertyValueCommand.cpp
Sources/Internal/CommandLine/: ProgramOptions.h
Sources/Internal/Compression/: ZipCompressor.h
Sources/Internal/Concurrency/: ConcurrentObject.h  JobManager.cpp  PosixThreads.cpp  Thread.cpp  Thread.h  ThreadWin32.cpp
Sources/Internal/Core/: ApplicationCore.cpp  ApplicationCore.h  Core.cpp  Core.h  PerformanceSettings.cpp
Sources/Internal/DLC/: DLC.cpp  DLC.h
Sources/Internal/Database/: MongodbClient.cpp  MongodbClient.h  MongodbObject.cpp
Sources/Internal/Debug/: Backtrace.cpp  Backtrace.h  DVAssert.h  DVAssertDefaultHandlers.h  DVAssertMessage.cpp  DVAssertMessageAndroid.cpp  DVAssertMessageAndroid.h  List.h  MemoryManager.cpp  MemoryManager.h  MemoryManagerTypes.h  ProfilerGPU.h  ProfilerMarkerNames.h
Sources/Internal/DeviceManager/: DeviceManager.h  DeviceManagerTypes.h
Sources/Internal/Engine/: DeviceManager.h  DeviceManagerTypes.h  EngineContext.h  EngineSettings.h  PlatformApiIos.h
Sources/Internal/Entity/: Component.cpp  Component.h  SceneSystem.cpp  SceneSystem.h
Sources/Internal/FileSystem/: DynamicMemoryFile.cpp  DynamicMemoryFile.h  File.cpp  File.h  FileList.cpp  FilePath.cpp  FilePathObjective.mm  FileSystem.cpp  FileSystem.h  KeyedArchive.cpp  KeyedArchive.h  KeyedUnarchiver.h  LocalizationAndriod.cpp  LocalizationAndroid.cpp  LocalizationAndroid.h  LocalizationIPhone.mm  LocalizationMacOS.h  LocalizationMacOS.mm  LocalizationSystem.cpp  LocalizationSystem.h  Logger.cpp  Logger.h  LoggerHtml5.cpp  LoggerNaCl.cpp  MemoryMappedFile.cpp  MemoryMappedFile.h  ResourceArchive.h  ResourceArchivePrivate.h  VariantType.cpp  VariantType.h  XMLParser.cpp  XMLParser.h  YamlParser.cpp  YamlParser.h  ZipArchive.h
Sources/Internal/Functional/: TrackedObject.h
Sources/Internal/Input/: Accelerometer.h  InputSystem.cpp  InputSystem.h  KeyboardDevice.cpp
Sources/Internal/Job/: Job.cpp  Job.h  JobManager.cpp  JobManager.h  JobQueue.cpp  JobQueue.h  JobScheduler.cpp  JobScheduler.h  JobWaiter.cpp  JobWaiter.h  WorkerThread.cpp  WorkerThread.h
Sources/Internal/Math/: AABBox2.h  AABBox3.cpp  AABBox3.h  Math2D.cpp  Math2DTemplateClasses.h  MathConstants.h  MathHelpers.h  Matrix2.h  Matrix4.cpp  Sphere.h  Vector.h
Sources/Internal/MemoryManager/: AllocPools.h  AllocatorBridge.h  MallocHook.h  MemoryManager.cpp  MemoryManagerTypes.h
Sources/Internal/Meta/: Result.h
Sources/Internal/ModuleManager/: IModule.h  ModuleManager.h
Sources/Internal/Network/: IPAddress.cpp  MailSender.cpp  MailSender.h  NetConfig.h  NetCore.cpp  NetCore.h  NetworkCommon.h  PeerDesription.cpp  ServiceRegistrar.cpp  ServiceRegistrar.h  TCPAcceptor.cpp  TCPAcceptorTemplate.h  TCPSocket.cpp  UDPSocket.cpp
Sources/Internal/Notification/: LocalNotificationController.cpp  LocalNotificationNotImplemented.cpp  LocalNotificationNotImplemented.h
Sources/Internal/Particles/: Particle.cpp  Particle.h  ParticleEmitter.cpp  ParticleLayer.cpp  ParticleLayer.h  ParticlePropertyLine.h  ParticleRenderObject.cpp  ParticleRenderObject.h
Sources/Internal/Platform/: CustomTextField.cpp  CustomTextField.h  DateTime.cpp  DateTime.h  DeviceInfo.cpp  DeviceInfo.h  FWSpinlock.cpp  FWSpinlock.h  JniHelpers.cpp  JniHelpers.h  Mutex.cpp  Mutex.h  (+17 more)
Tools/FileTransfer/: CMakeLists.txt  CommonTypes.h  SimpleSender.cpp  SimpleSender.h  UDPReceiver.cpp  UDPReceiver.h  UDPSender.cpp  UDPSender.h  main.cpp
(+2708 files in other folders)
