cmake_minimum_required (VERSION 2.8.6)

project (framework)

set ( FRAMEWORK_DEFINITIONS 
-D_UNICODE 
-DUNICODE 
-D_CRT_SECURE_NO_DEPRECATE 
-D_DEBUG
-D_CRT_SECURE_NO_DEPRECATE
-D_CRT_NON_CONFORMING_SWPRINTFS
-DDAVA_DEBUG
-DCURL_STATICLIB
-DDAVA_FMOD
)

set ( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/CMake/Modules/" ) 
set ( THIRD_PARTY_INCLUDE_PATH "${CMAKE_CURRENT_LIST_DIR}/../Libs/include" ) 

if(ANDROID)
    set ( THIRD_PARTY_LIBS_PATH  "${CMAKE_CURRENT_LIST_DIR}/../Libs/lib/android/${ANDROID_NDK_ABI_NAME}" ) 
    set ( FRAMEWORK_DEFINITIONS  ${FRAMEWORK_DEFINITIONS} -D___ANDROID__ -DDAVA_FMOD)
    set ( LIBRARY_OUTPUT_PATH    ${THIRD_PARTY_LIBS_PATH} )
else()
    set ( THIRD_PARTY_LIBS_PATH    "${CMAKE_CURRENT_LIST_DIR}/../Libs/lib" ) 
endif()


include ( CMake-common )
add_subdirectory ( Engine )

